# Lengjing-DFM

./: .gitattributes  .gitignore  0_test.bat  1_build.bat  2_pack.bat  3_debug.bat  4_log.bat
jni/: Android.mk  Application.mk  CMakeLists.txt
jni/cmake/: AuthConfigPrivate.cmake.example  AuthConfigPrivate.h.in
jni/config/: cloud_layout.v2.template.json
jni/include/Android_Graphics/: CPUGraphics.h  CPURasterRules.h  GraphicsManager.h  OpenGLGraphics.h  VulkanGraphics.h  vulkan_wrapper.h
jni/include/Android_draw/: AndroidImgui.h  draw.h  悬浮窗.h
jni/include/Android_touch/: TouchHelperA.h  TouchTransform.h
jni/include/ImGui/: imconfig.h  imgui.h  imgui_internal.h
jni/include/ImGui/backends/: imgui_impl_android.h  imgui_impl_vulkan.h
jni/include/My_Utils/: timer.h
jni/include/PhysX_/: EmbreeScene.h  PhysXCollector.h  PhysXCore.h  PhysXEnums.h  PhysXLoader.h  PhysXMeshData.h  PhysXStructures.h  PhysXTypes.h  PhysX_Log.h
jni/include/Physx/common/: PxBase.h  PxCoreUtilityTypes.h  PxMetaData.h  PxMetaDataFlags.h  PxPhysXCommonConfig.h  PxRenderBuffer.h  PxSerialFramework.h  PxSerializer.h  PxStringTable.h  PxTolerancesScale.h  PxTypeInfo.h
jni/include/Physx/foundation/: Px.h  PxAllocatorCallback.h  PxAssert.h  PxBitAndData.h  PxBounds3.h  PxErrorCallback.h  PxErrors.h  PxFlags.h  PxFoundation.h  PxIO.h  PxIntrinsics.h  PxMat33.h  PxMat44.h  PxMath.h  PxMathUtils.h  PxMemory.h  PxPlane.h  PxProfiler.h  PxQuat.h  PxSimpleTypes.h  PxStrideIterator.h  PxTransform.h  PxUnionCast.h  PxVec2.h  PxVec3.h  PxVec4.h
jni/include/Physx/geometry/: PxBoxGeometry.h  PxConvexMesh.h  PxConvexMeshGeometry.h  PxGeometry.h  PxGeometryHelpers.h  PxGeometryQuery.h  PxHeightField.h  PxHeightFieldDesc.h  PxHeightFieldFlag.h  PxHeightFieldGeometry.h  PxHeightFieldSample.h  PxMeshQuery.h  PxMeshScale.h  PxSimpleTriangleMesh.h  PxTriangle.h  PxTriangleMesh.h  PxTriangleMeshGeometry.h
jni/include/app/: AppController.h  CoordinateProbePolicy.h  RenderBackendSelection.h  RuntimeExitPolicy.h  RuntimePresentationPolicy.h
jni/include/auth/: AuthConfig.h  CardInputPolicy.h  CloudLayout.h  CloudLayoutStartupPolicy.h  CoordinatePoolCloudLayout.h  RemoteAuth.h
jni/include/config/: LocalConfig.h
jni/include/diagnostics/: CoordinateFailureUploader.h
jni/include/game/: CoordinateDecryptDiagnostics.h  FeatureSettings.h  FrameRetentionPolicy.h  GameBackend.h  GameFrame.h  GameRuntime.h  GameVersionPolicy.h  ProjectileTrackingFeature.h  RuntimeDiagnostics.h  VisibilityState.h
jni/include/game/aim/: AimController.h  AimGuidePolicy.h  AimInputAdapter.h  AimModePolicy.h  AimPrediction.h  CoverSelectionPolicy.h  GyroscopeDirectionPolicy.h  TouchMotionPolicy.h  TrackingCalculator.h
jni/include/game/data/: CustomItemCatalog.h  ItemCatalog.h  ThreatCatalog.h
jni/include/game/native/: ActorFrameVisitSet.h  ActorRecordRefreshPolicy.h  ActorRecordResolver.h  ActorRecordSource.h  AlgorithmCoordinateDiagnostics.h  AlgorithmCoordinateProbePolicy.h  AlgorithmCoordinateReader.h  AlgorithmPositionPolicy.h  AlgorithmPositionRuntime.h  AlgorithmReplayPolicy.h  BoneFrameSource.h  CharacterComponentTransform.h  CharacterPositionResolver.h  CoordinateDecrypt2Runtime.h  CoordinateDecrypt3Runtime.h  CoordinateEntryBranchPolicy.h  CoordinateOutputPolicy.h  CoordinatePoolPolicy.h  CoordinatePoolRuntime.h  ExecutionVeneerLocator.h  FrameProjection.h  GeometryRuntime.h  GeometrySceneBuildPolicy.h  GeometryShapeFilterPolicy.h  HardwareBreakpointCoordinateRuntime.h  HudMapProjection.h  (+22 more)
jni/include/native_surface/: ANativeWindowCreator.h
jni/include/platform/: BackgroundProcess.h  CoordinateDebugLog.h  MenuKeyMonitor.h  PerformanceTrace.h
jni/include/render/: CpuMailboxPolicy.h  OverlayContrastPolicy.h  PlayerTracerPolicy.h  PresentationRateTracker.h  overlay_renderer.h  render_types.h
jni/include/ui/: MenuLogoData.h  MenuView.h  UiActions.h  UiModel.h
jni/lib/embree4/: rtcore_config.h
jni/lib/paradise/: paradise_api.h
jni/lib/t3/: t3sdk.cpp  t3sdk.h
jni/lib/unicorn/: BUILD_INFO.txt
jni/src/: main.cpp
jni/src/Android_Graphics/: CPUGraphics.cpp  GraphicsManager.cpp  OpenGLGraphics.cpp  VulkanGraphics.cpp  vulkan_wrapper.cpp
jni/src/Android_draw/: AndroidImgui.cpp
jni/src/Android_touch/: TouchHelperA.cpp
jni/src/ImGui/: imgui.cpp  imgui_draw.cpp  imgui_widgets.cpp
jni/src/app/: AppController.cpp
jni/src/auth/: CloudLayout.cpp  CoordinatePoolCloudLayout.cpp  RemoteAuth.cpp
jni/src/config/: LocalConfig.cpp
jni/src/diagnostics/: CoordinateFailureUploader.cpp
jni/src/game/: GameRuntime.cpp
jni/src/platform/: BackgroundProcess.cpp  CoordinateDebugLog.cpp  MenuKeyMonitor.cpp  PerformanceTrace.cpp
jni/src/render/: PresentationRateTracker.cpp  overlay_renderer.cpp
jni/src/ui/: MenuView.cpp
tests/: CMakeLists.txt  actor_frame_visit_set_tests.cpp  actor_record_refresh_policy_tests.cpp  actor_record_resolver_tests.cpp  actor_record_source_tests.cpp  aim_guide_policy_tests.cpp  aim_mode_policy_tests.cpp  aim_prediction_tests.cpp  algorithm_coordinate_config_tests.cpp  algorithm_coordinate_reader_tests.cpp  algorithm_position_policy_tests.cpp  algorithm_position_runtime_semantics_tests.cpp  auth_config_tests.cpp  auth_session_tests.cpp  auth_transport_tests.cpp  card_input_policy_tests.cpp  character_component_transform_tests.cpp  cloud_layout_startup_policy_tests.cpp  cloud_layout_tests.cpp  config_tests.cpp  coordinate_debug_log_tests.cpp  coordinate_decrypt3_abi_tests.cpp  coordinate_entry_branch_policy_tests.cpp  coordinate_failure_uploader_tests.cpp  coordinate_output_policy_tests.cpp  coordinate_pool_cloud_layout_standalone_tests.cpp  coordinate_pool_policy_tests.cpp  coordinate_pool_runtime_plan_tests.cpp  coordinate_reader_tests.cpp  cpu_mailbox_policy_tests.cpp  execution_veneer_locator_tests.cpp  frame_projection_tests.cpp  game_version_policy_tests.cpp  geometry_scene_build_policy_tests.cpp  hardware_breakpoint_coordinate_runtime_tests.cpp  hud_map_tests.cpp  kernel_module_catalog_tests.cpp  kernel_rpc_transport_tests.cpp  overlay_contrast_policy_tests.cpp  pacga_operand_resolver_tests.cpp  (+24 more)
(+48 files in other folders)
